# PowerGridSimulator

./: CMakeLists.txt  README.md
src/: graph.hpp  gui.hpp  main.cpp  redistribution.hpp
